[package]
name = "whirlpool-cpi"
version = "0.1.1"
authors = ["Developer Advocate from Orca"]
description = "CPI Adapter for Orca Whirlpool"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "whirlpool_cpi"

[features]
# build for CPI
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "=0.27.0"
anchor-spl = "=0.27.0"

# spl-token-2022 depends on solana-zk-token-sdk and its version must be same to solana-program.
# spl-token-2022:0.5.0 work with solana-zk-token-sdk:1.14.16 ~ 1.14.17 only...
# https://github.com/coral-xyz/anchor/issues/2502
spl-associated-token-account = { version = "=1.1.2", features = ["no-entrypoint"] }
blake3 = "=1.3.1"
solana-program = ">=1.14.16, <=1.14.17"
regex = "=1.7.1"
proc-macro-crate = "=1.2.1"
jobserver = "=0.1.25"

# unpack TickArray
bincode = "1"
default-boxed = "0.2.0"
